# d4-diag

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: docs.yml  release.yml  static.yml
contributing/: index.html
contributing/code-quality/: index.html
diagrams/: class_diagram.mmd
diagrams/architecture/: index.html
diagrams/class_diagram/: index.html
diagrams/module_deps/: index.html
docs/: contributing.md  examples.md  index.md
docs/contributing/: code-quality.md
docs/diagrams/: architecture.md  architecture.mmd  class_diagram.md  module_deps.md  module_deps.mmd
docs/getting-started/: installation.md  quick-start.md
docs/reference/: api.md  cli.md
docs/user-guide/: analyzing-code.md  diagram-types.md  programmatic-usage.md  viewing-diagrams.md
examples/: example_api_usage.py  index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
reference/api/: index.html
reference/cli/: index.html
search/: search_index.json
src/d4_diag/: __init__.py  _version.py  generate_mermaid.py  main.py  utils.py  viewer_mermaid.py
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  run_tests.py  test_cli_basic.py  test_generate_mermaid.py  test_integration.py  test_main.py  test_utils.py  test_version.py  test_viewer_mermaid.py
user-guide/analyzing-code/: index.html
user-guide/diagram-types/: index.html
user-guide/programmatic-usage/: index.html
user-guide/viewing-diagrams/: index.html
